# ts-bind

./: Cargo.toml  README.md  stuff.rs
example/: Cargo.toml
example/src/: main.rs
ts-bind/: Cargo.toml
ts-bind-macros/: Cargo.toml
ts-bind-macros/src/: deps.rs  generics.rs  lib.rs  utils.rs
ts-bind-macros/src/attrs/: mod.rs  trait.rs
ts-bind-macros/src/types/: trait.rs
ts-bind-shared/: Cargo.toml
ts-bind-shared/src/: generics.rs  lib.rs  types.rs
ts-bind/src/: lib.rs
