[package]
name = "ts-bind-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
serde-compat = []
test-gen = []
warnings = ["termcolor"]

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
Inflector = { version = "0.11", default-features = false }
darling = "0.14.1"
ts-bind-shared = { version = "0.1.0", path = "../ts-bind-shared" }
termcolor = { version = "1", optional = true }